<resources>
	<string name="app_name">Organízate!</string>

	<string name="aviso">Aviso!</string>
	<string name="cerrar">Cerrar</string>

	<string name="editar">Editar</string>
	<string name="eliminar">Eliminar</string>
	<string name="nuevo">Añadir</string>
	<string name="volver">Volver</string>
	<string name="editar_aviso">Editar Aviso</string>
	<string name="editar_aviso_geo">Editar Aviso Geo</string>

	<string name="nombre">Nombre</string>
	<string name="descripcion">Descripción</string>
	<string name="nodo_padre">*Nodo Raíz*</string>
	<string name="prioridad">Prioridad</string>
	<string name="fec_creado">Creado</string>
	<string name="fec_modificado">Modificado</string>
	<string name="fec_limite">Límite</string>

	<string name="usuario">Usuario</string>
	<string name="clave">Clave</string>

	<string name="seguro_eliminar">¿Seguro que desea eliminar?</string>
	<string name="sintareas">Sin tareas</string>

	<string name="lunes">Lu</string>
	<string name="martes">Ma</string>
	<string name="miercoles">Mi</string>
	<string name="jueves">Ju</string>
	<string name="viernes">Vi</string>
	<string name="sabado">Sa</string>
	<string name="domingo">Do</string>

	<string name="todo">Todo</string>
	<string name="nada">Nada</string>

	<string name="activo">Activo</string>
	<string name="fecha">Fecha:</string>
	<string name="mes">+Mes</string>
	<string name="dia_mes">+Día Mes</string>
	<string name="dia_semana">+Día Sem.</string>
	<string name="hora">+Hora</string>
	<string name="minuto">+Minuto</string>
	<string name="desactivar_por_ahora">No me avises\nmás hoy</string>
	<string name="leer">Lee el contenido</string>

	<string name="posicion">Pos:</string>
	<string name="actualizar_posicion">Actualizar posición</string>
	<string name="radio">Radio</string>

	<string name="geofen_in">Entrando en zona de Aviso</string>
	<string name="geofen_out">Fuera de zona de Aviso</string>
	<string name="geofen_dwell">En zona de Aviso</string>

	<string name="config">Preferencias</string>
	<string name="title_activity_act_config">Settings</string>




	<!-- Strings related to Settings -->

	<!-- Example General settings -->
	<string name="pref_header_general">General</string>

	<string name="pref_title_social_recommendations">Enable social recommendations</string>
	<string name="pref_description_social_recommendations">Recommendations for people to contact based on your message history
	</string>

	<string name="pref_title_display_name">Display name</string>
	<string name="pref_default_display_name">John Smith</string>

	<string name="pref_title_add_friends_to_messages">Add friends to messages</string>
	<string-array name="pref_example_list_titles">
		<item>Always</item>
		<item>When possible</item>
		<item>Never</item>
	</string-array>
	<string-array name="pref_example_list_values">
		<item>1</item>
		<item>0</item>
		<item>-1</item>
	</string-array>

	<!-- Example settings for Data & Sync -->
	<string name="pref_header_data_sync">Data &amp; sync</string>
	
	<string name="pref_title_sync_frequency">Sync frequency</string>
	<string-array name="pref_sync_frequency_titles">
		<item>15 minutes</item>
		<item>30 minutes</item>
		<item>1 hour</item>
		<item>3 hours</item>
		<item>6 hours</item>
		<item>Never</item>
	</string-array>
	<string-array name="pref_sync_frequency_values">
		<item>15</item>
		<item>30</item>
		<item>60</item>
		<item>180</item>
		<item>360</item>
		<item>-1</item>
	</string-array>
	
	<string name="pref_title_system_sync_settings">System sync settings</string>

	<!-- Example settings for Notifications -->
	<string name="pref_header_notifications">Avisos</string>
	<string name="pref_title_new_message_notifications_type">Mostrar diálogo pop-up</string> <!-- o en barra de estado : status bar -->
	<string name="pref_title_new_message_notifications">Avisos</string>
	<string name="pref_title_ringtone">Sonido</string>
	<string name="pref_ringtone_silent">Silencio</string>
	<string name="pref_title_vibrate">Vibrar</string>

</resources>
