<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
	android:id="@+id/layMain"
	xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:background="@drawable/widget"
	app:layout_behavior="@string/appbar_scrolling_view_behavior"
	tools:context=".ActAvisoDlg">

	<LinearLayout
		android:id="@+id/lay"
		android:layout_alignParentTop="true"
		android:orientation="horizontal"
		android:layout_marginTop="8dp"
		android:layout_marginRight="10dp"
		android:layout_marginEnd="10dp"
		android:layout_marginLeft="10dp"
		android:layout_marginStart="10dp"
		android:layout_width="match_parent"
		android:layout_height="wrap_content">

		<TextView
			android:id="@+id/titulo"
			android:layout_width="0dp"
			android:layout_height="match_parent"
	        android:layout_weight="1"
			android:textAppearance="?android:attr/textAppearanceLarge"
			android:text="@string/app_name"	/>

		<ImageButton
			android:id="@+id/btnCerrar"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_gravity="end"
			style="@style/btnStyle2"
			android:src="@android:drawable/ic_menu_close_clear_cancel"
			android:contentDescription="@string/cerrar"
		/>
	</LinearLayout>

	<TextView
		android:id="@+id/txtAviso"
		android:layout_below="@+id/lay"
		android:layout_marginTop="10dp"
		android:layout_marginLeft="5dp"
		android:layout_marginRight="5dp"
		android:layout_centerHorizontal="true"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:textAppearance="?android:attr/textAppearanceLarge"
		android:text="@string/app_name"
		android:maxLines="6"
		/>

	<Switch
		android:id="@+id/bActivo"
		android:layout_below="@+id/txtAviso"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_centerHorizontal="true"
		android:layout_marginTop="10dp"
		android:text="@string/activo"
		/>

	<Button
		android:id="@+id/btnDesactivar"
		android:layout_below="@+id/bActivo"
		android:layout_centerHorizontal="true"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_marginTop="20dp"
		android:text="@string/desactivar_por_ahora"
		/>



</RelativeLayout>