<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:paddingBottom="@dimen/activity_vertical_margin"
	android:paddingLeft="@dimen/activity_horizontal_margin"
	android:paddingRight="@dimen/activity_horizontal_margin"
	android:paddingTop="@dimen/activity_vertical_margin"
	app:layout_behavior="@string/appbar_scrolling_view_behavior"
	tools:context=".ActAvisoGeoEdit"
	tools:showIn="@layout/act_avisogeo_edit">

	<Switch
		android:id="@+id/bActivo"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_centerHorizontal="true"
		android:paddingBottom="10dp"
		android:text="@string/activo"
		/>

	<android.support.design.widget.TextInputLayout
		android:id="@+id/txtAviso_"
		android:layout_below="@+id/bActivo"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		>
		<AutoCompleteTextView
			android:id="@+id/txtAviso"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:hint="@string/descripcion"
			android:inputType="textMultiLine"
			android:maxLines="3"
			android:singleLine="true"/>
	</android.support.design.widget.TextInputLayout>

	<LinearLayout
		android:id="@+id/layPosicion"
		android:layout_below="@+id/txtAviso_"
		android:orientation="horizontal"
		android:layout_centerHorizontal="true"
		android:layout_centerVertical="true"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		>

		<TextView
			android:id="@+id/lblPosicion_"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:textAppearance="?android:attr/textAppearanceMedium"
			android:text="@string/posicion"
			android:layout_marginRight="15dp"
			android:layout_marginEnd="15dp"
			android:layout_gravity="center_vertical"/>
		<TextView
			android:id="@+id/lblPosicion"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:textAppearance="?android:attr/textAppearanceLarge"
			android:layout_marginRight="10dp"
			android:layout_marginEnd="10dp"
			android:text="0.0/0.0"
			android:layout_gravity="center_vertical"/>
		<ImageButton
			android:id="@+id/btnActPos"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_marginRight="10dp"
			android:layout_marginEnd="10dp"
			android:layout_gravity="center_vertical"
			android:contentDescription="@string/actualizar_posicion"
			android:src="@android:drawable/ic_menu_mylocation" />
	</LinearLayout>

	<LinearLayout
		android:id="@+id/layRadio"
		android:layout_below="@+id/layPosicion"
		android:orientation="horizontal"
		android:layout_centerHorizontal="true"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		>
		<TextView
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:textAppearance="?android:attr/textAppearanceMedium"
			android:text="@string/radio"/>
		<Spinner
			android:id="@+id/spnRadio"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			 android:textSize="20dp"
			android:prompt="@string/radio" />
	</LinearLayout>

	<fragment
		xmlns:android="http://schemas.android.com/apk/res/android"
    	xmlns:tools="http://schemas.android.com/tools"
		class="com.google.android.gms.maps.SupportMapFragment"
		android:layout_marginTop="5dp"
		android:id="@+id/map"
		android:layout_width="match_parent"
		android:layout_height="match_parent"
		tools:context=".ActAvisoGeoEdit"
		android:layout_below="@+id/layRadio"
		/>

</RelativeLayout>
