<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:paddingBottom="@dimen/activity_vertical_margin"
	android:paddingLeft="@dimen/activity_horizontal_margin"
	android:paddingRight="@dimen/activity_horizontal_margin"
	android:paddingTop="@dimen/activity_vertical_margin"
	app:layout_behavior="@string/appbar_scrolling_view_behavior"
	tools:context="com.cesoftware.cestodo1.ActEdit"
	tools:showIn="@layout/act_edit">

	<android.support.design.widget.TextInputLayout
		android:id="@+id/txtNombre_"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		>
		<AutoCompleteTextView
			android:id="@+id/txtNombre"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:hint="@string/nombre"
			android:inputType="text"
			android:maxLines="1"
			android:singleLine="true"/>
	</android.support.design.widget.TextInputLayout>

	<android.support.design.widget.TextInputLayout
		android:id="@+id/txtDescripcion_"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_below="@+id/txtNombre_"
		>
		<AutoCompleteTextView
			android:id="@+id/txtDescripcion"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:hint="@string/descripcion"
			android:inputType="textMultiLine"
			android:maxLines="3"
			android:singleLine="true"/>
	</android.support.design.widget.TextInputLayout>

	<TextView
		android:id="@+id/lbPrioridad"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_below="@+id/txtDescripcion_"
		android:layout_alignParentLeft="true"
		android:layout_alignParentStart="true"
		android:text="@string/prioridad"
		/>
	<RatingBar
		android:id="@+id/rbPrioridad"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_centerHorizontal="true"
		android:layout_centerVertical="true"
		android:layout_alignBaseline="@+id/lbPrioridad"
		android:numStars="5"
        android:stepSize="1.0"
		/>

	<Button
		android:id="@+id/btnPadre"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_centerHorizontal="true"
		android:layout_centerVertical="true"
		android:text="@string/nodo_padre"
		android:layout_below="@+id/rbPrioridad"
		/>

	<ImageButton
		android:id="@+id/btnEliminar"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:src="@android:drawable/ic_menu_delete"
		android:layout_below="@+id/btnPadre"
		android:layout_alignParentLeft="true"
		android:layout_alignParentStart="true"
		android:layout_marginTop="10dp"
		/>

	<ImageButton
		android:id="@+id/btnGuardar"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:src="@android:drawable/ic_menu_save"
		android:layout_below="@+id/btnPadre"
		android:layout_alignParentRight="true"
		android:layout_alignParentEnd="true"
		android:layout_marginTop="10dp"
		/>

</RelativeLayout>
