<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:paddingBottom="@dimen/activity_vertical_margin"
	android:paddingLeft="@dimen/activity_horizontal_margin"
	android:paddingRight="@dimen/activity_horizontal_margin"
	android:paddingTop="@dimen/activity_vertical_margin"
	app:layout_behavior="@string/appbar_scrolling_view_behavior"
	tools:context=".ActAvisoEdit"
	tools:showIn="@layout/act_aviso_edit">

	<!--ToggleButton
		android:id="@+id/tb"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:text="Fecha / Condiciones"
		/-->

	<!-- TextView
		android:id="@+id/lblFecha"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:textAppearance="?android:attr/textAppearanceSmall"
		android:text="@string/fecha"
		android:layout_below="@+id/tb"
		/>
	<DatePicker
		android:id="@+id/fecha"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_toEndOf="@id/lblFecha"
		android:layout_toRightOf="@id/lblFecha"

		android:layout_below="@+id/lblFecha"
		/-->


	<ScrollView android:id="@+id/scrMes" android:layout_width="fill_parent" android:layout_height="fill_parent">
	<LinearLayout
		android:id="@+id/layMes"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:orientation="horizontal">
		<Button
			android:id="@+id/btnMes"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_centerHorizontal="true"
			android:layout_marginTop="2dp"
			android:text="@string/mes"
			/>
	</LinearLayout>
	</ScrollView>

	<ScrollView android:id="@+id/scrDiaMes" android:layout_width="fill_parent" android:layout_height="fill_parent">
	<LinearLayout
		android:id="@+id/layDiaMes"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_below="@+id/layMes"
		android:orientation="horizontal">
		<Button
			android:id="@+id/btnDiaMes"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_centerHorizontal="true"
			android:layout_marginTop="2dp"
			android:text="@string/dia_mes"
			/>
	</LinearLayout>
	</ScrollView>

	<ScrollView android:id="@+id/scrDiaSemana" android:layout_width="fill_parent" android:layout_height="fill_parent">
	<LinearLayout
		android:id="@+id/layDiaSemana"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_below="@+id/layDiaMes"
		android:orientation="horizontal">
		<Button
			android:id="@+id/btnDiaSemana"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_centerHorizontal="true"
			android:layout_marginTop="2dp"
			android:text="@string/dia_semana"
			/>
	</LinearLayout>
	</ScrollView>

	<ScrollView android:id="@+id/scrHora" android:layout_width="fill_parent" android:layout_height="fill_parent">
	<LinearLayout
		android:id="@+id/layHora"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_below="@+id/layDiaSemana"
		android:orientation="horizontal">
		<Button
			android:id="@+id/btnHora"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_centerHorizontal="true"
			android:layout_marginTop="2dp"
			android:text="@string/hora"
			/>
	</LinearLayout>
	</ScrollView>

	<ScrollView android:id="@+id/scrMinuto" android:layout_width="fill_parent" android:layout_height="fill_parent">
	<LinearLayout
		android:id="@+id/layMinuto"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_below="@+id/layHora"
		android:orientation="horizontal">
		<Button
			android:id="@+id/btnMinuto"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_centerHorizontal="true"
			android:layout_marginTop="2dp"
			android:text="@string/minuto"
			/>
	</LinearLayout>
	</ScrollView>

	<!-- TimePicker
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:id="@+id/timePicker"/ -->

</RelativeLayout>
